--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,25 @@
+body{
+    font-family: "Lucida Console", "Courier New", monospace;
+    background-color: rgb(234, 218, 187);
+}
+
 .active
 {
     background:rgb(223, 189, 150);
     padding:2px 6px;
 }
+
+nav ul a:hover {
+    background-color: #ddd;
+    color: rgb(185, 142, 142);
+  }
+
+nav ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 
 .skip{
     position: absolute;
@@ -20,19 +37,66 @@
   left: -9999px;
 }
 
-.pet-gallery{
+.gallery{
     display: grid;
-    grid-column: 1fr 1fr 1fr;
+    grid-column: 1fr 1fr;
     row-gap: 15px;
-    column-gap: 15px
+    column-gap: 5px;
+    place-items: center;
 }
 
-.pet-gallery .gallery-1{
-    grid-column: 1 / 3;
-    grid-row: 1;
+.gallery *:nth-child(2n+1){
+    grid-column: 1 / 2;
+    border: 3px solid #000;
 }
 
-.pet-gallery .gallery-2{
-    grid-column: 3/-1;
-    grid-row: 1;
+.gallery *:nth-child(2n){
+    grid-column: 2 / 3;
+    border: 3px solid #000;
+}
+
+.travel-gallery{
+    display: grid;
+    place-items: center;
+}
+
+.travel-gallery>*{
+    border: 3px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.main-photo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.main-photo img{
+    border: 5px dashed #000;
+    margin: 10px;
+}
+
+h1{
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+h2{
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    /* margin: 0;
+    padding: 0; */
+}
+
+.food-info{
+    display: flex;
+    flex-direction: column;
+    border: 3px solid #000;
+    padding: 10px;
 }
