--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,9 @@ h2{
     border: 3px solid #000;
     padding: 10px;
 }
+
+@media (prefers-reduced-motion: reduce) {
+    .gif {
+      display: none;
+    }
+  }
